// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Input AvecBordsColorés smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-error-1">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-error-1"
         placeholder="placeholder"
         value
  >
  <button class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
          style="color: rgb(245, 91, 91);"
  >
    <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
    </span>
  </button>
</div>
`;

exports[`design-system/Input AvecIcone smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] self-center min-w-[3rem] text-primary">
  </span>
</div>
`;

exports[`design-system/Input AvecIconeBouton smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <button title="Rechercher"
          class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
    </span>
  </button>
</div>
`;

exports[`design-system/Input AvecIconeBoutonEtDesactive smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         disabled
         placeholder="placeholder"
         value
  >
  <button title="Rechercher"
          disabled
          class="relative w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-4 !bg-white !border-white p-3.5 rounded-none border-none"
  >
    <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-4">
    </span>
  </button>
</div>
`;

exports[`design-system/Input AvecIconeEtDesactive smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         disabled
         placeholder="placeholder"
         value
  >
  <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] self-center min-w-[3rem] text-grey-6">
  </span>
</div>
`;

exports[`design-system/Input AvecIconeTexte smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <span class="self-center text-xs text-center font-bold min-w-[3rem] text-primary">
    TTC
  </span>
</div>
`;

exports[`design-system/Input AvecIconeTexteEtDesactive smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         disabled
         placeholder="placeholder"
         value
  >
  <span class="self-center text-xs text-center font-bold min-w-[3rem] text-grey-6">
    TTC
  </span>
</div>
`;

exports[`design-system/Input AvecPlaceholder smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         placeholder="Saisir une valeur"
         data-test="ok"
         value
  >
</div>
`;

exports[`design-system/Input AvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value="plop"
  >
</div>
`;

exports[`design-system/Input Default smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value
  >
</div>
`;

exports[`design-system/Input PersonnalisationDuContainer smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4 p-2">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value="une valeur"
  >
</div>
`;

exports[`design-system/Input TypeDate smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="date"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 [&amp;::-webkit-calendar-picker-indicator]:hidden"
         value
  >
  <button type="button"
          class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <span class="ri-calendar-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
    </span>
  </button>
</div>
`;

exports[`design-system/Input TypeDateAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="date"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 [&amp;::-webkit-calendar-picker-indicator]:hidden"
         value="2024-01-17"
  >
  <button type="button"
          class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <span class="ri-calendar-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
    </span>
  </button>
</div>
`;

exports[`design-system/Input TypeNumberFloat smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value
         inputmode="numeric"
  >
</div>
`;

exports[`design-system/Input TypeNumberFloatAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value="12 345,67"
         inputmode="numeric"
  >
</div>
`;

exports[`design-system/Input TypeNumberInt smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value
         inputmode="numeric"
  >
</div>
`;

exports[`design-system/Input TypeNumberIntAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value="12 345"
         inputmode="numeric"
  >
</div>
`;

exports[`design-system/Input TypeOTP smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 w-32 text-lg text-center"
         inputmode="numeric"
         value="_ _ _ _ _ _"
  >
</div>
`;

exports[`design-system/Input TypeOTPAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 w-32 text-lg text-center"
         inputmode="numeric"
         value="1 2 3 4 5 6"
  >
</div>
`;

exports[`design-system/Input TypePassword smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="password"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         value
  >
  <button type="button"
          title="Voir le mot de passe"
          class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <span class="ri-eye-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
    </span>
  </button>
</div>
`;

exports[`design-system/Input TypePasswordAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="password"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         value="hyper secret"
  >
  <button type="button"
          title="Voir le mot de passe"
          class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <span class="ri-eye-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
    </span>
  </button>
</div>
`;

exports[`design-system/Input TypePattern smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         inputmode="numeric"
         value="_ _ _ _"
  >
</div>
`;

exports[`design-system/Input TypePatternAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         inputmode="numeric"
         value="1 2 3 4"
  >
</div>
`;

exports[`design-system/Input TypeSearch smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="search"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 search-reset:appearance-none search-reset:w-5 search-reset:h-5 search-reset:bg-close-circle-fill"
         value
  >
  <button title="Rechercher"
          disabled
          class="relative w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-4 !bg-white !border-white p-3.5 rounded-none border-none"
  >
    <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-4">
    </span>
  </button>
</div>
`;

exports[`design-system/Input TypeSearchAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="search"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 search-reset:appearance-none search-reset:w-5 search-reset:h-5 search-reset:bg-close-circle-fill"
         value="valeur recherchée"
  >
  <button title="Rechercher"
          class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
    </span>
  </button>
</div>
`;

exports[`design-system/Input TypeSearchLoading smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="search"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 search-reset:appearance-none search-reset:w-5 search-reset:h-5 search-reset:bg-close-circle-fill"
         value="valeur recherchée"
  >
  <button title="Rechercher"
          class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <span class="ri-loader-4-line animate-spin font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
    </span>
  </button>
</div>
`;

exports[`design-system/Input TypeTel smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="tel"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         inputmode="numeric"
         value
  >
</div>
`;

exports[`design-system/Input TypeTelAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="tel"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         inputmode="numeric"
         value="01 23 45 67 89"
  >
</div>
`;

exports[`design-system/Input VarianteSmall smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-sm py-2"
         placeholder="placeholder"
         value
  >
</div>
`;

exports[`design-system/Input VarianteSmallEtBouton smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-sm py-2 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <button title="Rechercher"
          class="relative w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-2.5 rounded-none border-none"
  >
    <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
    </span>
  </button>
</div>
`;

exports[`design-system/Input VarianteSmallIconeTexte smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-sm py-2 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <span class="self-center text-xs text-center font-bold min-w-[3rem] text-primary">
    TTC
  </span>
</div>
`;
